# game-recommendation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  lefthook.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: architecture_structure.md  post_task_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
scripts/: format.sh  lint.sh  migrate.sh  test.sh
src/game_recommendation/: __init__.py
src/game_recommendation/cli/: __init__.py  app.py
src/game_recommendation/cli/commands/: __init__.py  igdb.py  import_games.py  prompt.py  recommend.py  (+1 more)
src/game_recommendation/core/: __init__.py
src/game_recommendation/infra/: __init__.py
src/game_recommendation/shared/: __init__.py  config.py  exceptions.py  logging.py  types.py
tests/: __init__.py
tests/cli/: test_igdb_cli.py  test_import_games_cli.py  test_prompt_cli.py  test_recommend_cli.py  test_recommend_release.py
tests/core/: __init__.py
tests/core/favorites/: test_loader.py  test_query.py
tests/core/ingest/: __init__.py  test_builder.py  test_models.py  test_models_prompt_formatting.py  test_tag_resolver.py
tests/core/prompting/: test_builder.py
tests/core/similarity/: test_service.py
tests/infra/: __init__.py
tests/infra/agents/: __init__.py  test_runners.py
tests/infra/db/: __init__.py  test_embedding_repository.py  test_models.py  test_sqlite_vec.py
tests/infra/discord/: __init__.py  test_client.py
tests/infra/embeddings/: test_gemini.py
tests/infra/igdb/: __init__.py  test_client.py
tests/shared/: test_config.py
(+42 files in other folders)
