[project]
name = "game-recommendation"
version = "0.1.0"
description = "Skeleton for the game recommendation toolkit"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "streamlit>=1.32",
    "typer>=0.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.scripts]
"game-reco" = "game_recommendation.cli.app:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_recommendation"]

[tool.hatch.build.targets.sdist]
include = ["src/game_recommendation", "pyproject.toml", "README.md"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
